fix test deployment: try with python wheel file

--- a/web/login.html
+++ b/web/login.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="loginform">
-        <input type="password" placeholder="Enter Password" />
+        <input id="mdp" type="password" placeholder="Enter Password" />
         <button id="login">Signin</button>
     </div>
 
