websocket authentication + signin popup instead of separate page + run after deploy

--- a/web/index.html
+++ b/web/index.html
@@ -15,6 +15,13 @@
 </head>
 
 <body>
+    <div class="signinpopup">
+        <div class="signincontainer">
+            <input id="signinValue" type="password" placeholder="Enter Password" />
+            <button id="signinButton">Signin</button>
+        </div>
+    </div>
+
     <div class="topbar">
         <div class="brand">APInator</div>
         <!-- <div class="actions">
