integrate boxedMonaco code editor

--- a/web/index.html
+++ b/web/index.html
@@ -57,8 +57,6 @@
         <div class="livecodelogs-container">
             <div class="livecode">
             </div>
-            <div class="livelogs">
-            </div>
         </div>
     </div>
 
@@ -67,6 +65,7 @@
     <script src="/config.js"></script>
 
     <script src="/js/lib/tinyveil.js"></script>
+    <script src="/js/lib/boxedmonaco.js"></script>
 
     <script src="/js/createapi.js"></script>
     <script src="/js/error.js"></script>
