use boxedMonaco with separate workers

--- a/web/index.html
+++ b/web/index.html
@@ -65,7 +65,7 @@
     <script src="/config.js"></script>
 
     <script src="/js/lib/tinyveil.js"></script>
-    <script src="/js/lib/boxedmonaco.js"></script>
+    <script src="/js/lib/app.boxedmonaco.js"></script>
 
     <script src="/js/createapi.js"></script>
     <script src="/js/error.js"></script>
