--- a/web/index.html
+++ b/web/index.html
@@ -53,7 +53,7 @@
     </div>
 
     <div class="section2">
-        <span>Live Preview</span>
+        <h3>Live Preview</h3>
         <div class="livecodelogs-container">
             <div class="livecode">
             </div>
