--- a/web/index.html
+++ b/web/index.html
@@ -55,7 +55,11 @@
     <div class="section2">
         <h3>Live Preview</h3>
         <div class="livecodelogs-container">
-            <div class="livecode">
+            <div class="codeEditor">
+                <div class="filesystem">
+                </div>
+                <div class="code">
+                </div>
             </div>
         </div>
     </div>
