--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,9 @@
     </title>
 
     <link rel="stylesheet" type="text/css" href="/css/reset.css">
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+
     <link rel="stylesheet" type="text/css" href="/css/index.css">
 
 </head>
@@ -57,6 +60,67 @@
         <div class="livecodelogs-container">
             <div class="codeEditor">
                 <div class="filesystem">
+                    <div id="hierarchy">
+                        <div class="foldercontainer">
+                            <span class="folder fa-folder-o" data-isexpanded="true">Folder 1</span>
+                            <span class="file fa-file-excel-o">File 11</span>
+                            <span class="file fa-file-code-o">File 12</span>
+                            <span class="file fa-file-pdf-o">File 13</span>
+
+                            <div class="foldercontainer">
+                                <span class="folder fa-folder-o" data-isexpanded="true">Folder 1-1</span>
+                                <span class="file fa-file-excel-o">File 1-11</span>
+                                <span class="file fa-file-code-o">File 1-12</span>
+                                <span class="file fa-file-pdf-o">File 1-13</span>
+                            </div>
+
+                            <div class="foldercontainer">
+                                <span class="folder fa-folder">Folder 1-2</span>
+                                <span class='noitems'>No Items</span>
+                            </div>
+
+                            <div class="foldercontainer">
+                                <span class="folder fa-folder">Folder 1-3</span>
+                                <span class='noitems'>No Items</span>
+                            </div>
+
+                            <div class="foldercontainer">
+                                <span class="folder fa-folder">Folder 1-4</span>
+                                <span class='noitems'>No Items</span>
+                            </div>
+                        </div>
+
+                        <div class="foldercontainer">
+                            <span class="folder fa-folder-o" data-isexpanded="true">Folder 2</span>
+                            <span class="file fa-file-excel-o">File 21</span>
+                            <span class="file fa-file-code-o">File 22</span>
+                            <span class="file fa-file-pdf-o">File 23</span>
+
+                            <div class="foldercontainer">
+                                <span class="folder fa-folder-o" data-isexpanded="true">Folder 2-1</span>
+                                <span class="file fa-file-excel-o">File 2-11</span>
+                                <span class="file fa-file-code-o">File 2-12</span>
+                                <span class="file fa-file-pdf-o">File 2-13</span>
+
+                                <div class="foldercontainer">
+                                    <span class="folder fa-folder">Folder 2-1-1</span>
+                                    <span class='noitems'>No Items</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="foldercontainer">
+                            <span class="folder fa-folder-o" data-isexpanded="true">Folder 3</span>
+                            <span class="file fa-file-excel-o">File 31</span>
+                            <span class="file fa-file-code-o">File 32</span>
+                            <span class="file fa-file-pdf-o">File 33</span>
+
+                            <div class="foldercontainer">
+                                <span class="folder fa-folder">Folder 3-1</span>
+                                <span class='noitems'>No Items</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="code">
                 </div>
