--- a/web/index.html
+++ b/web/index.html
@@ -35,7 +35,7 @@
     <div class="section1">
         <div class="header-container">
             <div class="mascot">
-                <img src="/assets/mascot.svg" />
+                <img src="/assets/images/mascot.png" />
             </div>
 
             <div class="header">
