fix signin popup css

--- a/web/index.html
+++ b/web/index.html
@@ -19,6 +19,8 @@
 
 <body>
     <div class="signinpopup">
+        <div class="veil">
+        </div>
         <div class="signincontainer">
             <input id="signinValue" type="password" placeholder="Enter Password" />
             <button id="signinButton">Signin</button>
