--- a/web/index.html
+++ b/web/index.html
@@ -22,7 +22,10 @@
         <div class="veil">
         </div>
         <div class="signincontainer">
-            <input id="signinValue" type="password" placeholder="Enter Password" />
+            <div class="field">
+                <input id="signinValue" type="password" placeholder="Enter Password" />
+                <div class="line"></div>
+              </div>
             <button id="signinButton">Signin</button>
         </div>
     </div>
@@ -63,7 +66,7 @@
             <div class="codeEditor">
                 <div class="filesystem">
                     <div id="hierarchy">
-                        <div class="foldercontainer">
+                        <!-- <div class="foldercontainer">
                             <span class="folder fa-folder-o" data-isexpanded="true">Folder 1</span>
                             <span class="file fa-file-excel-o">File 11</span>
                             <span class="file fa-file-code-o">File 12</span>
@@ -121,7 +124,7 @@
                                 <span class="folder fa-folder">Folder 3-1</span>
                                 <span class='noitems'>No Items</span>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="code">
